--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1231,7 +1231,7 @@ body {
   border-radius: 5px;
 }
 
-.signup-form {
+/* .signup-form {
   margin: 0 auto;
   max-width: 55rem;
   background-color: #fff;
@@ -1239,7 +1239,7 @@ body {
   box-shadow: 0 2.5rem 8rem 2rem rgba(0, 0, 0, 0.06);
   padding: 5rem 7rem;
   border-radius: 5px;
-}
+} */
 
 .form__input {
   display: block;
